--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
     "@google-cloud/text-to-speech": "^4.2.1",
+    "@mantine/core": "^5.10.5",
+    "@mantine/hooks": "^5.10.5",
+    "@tabler/icons-react": "^2.7.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.13",
     "howler": "^2.2.3",
@@ -17,6 +21,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "wavesurfer.js": "^6.4.0"
   },
