--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "wavesurfer.js": "^6.4.0"
@@ -29,6 +30,7 @@
     "@types/howler": "^2.2.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-howler": "^5.2.0",
     "@types/wavesurfer.js": "^6.0.3",
     "@vitejs/plugin-react": "^3.1.0",
     "tailwindcss": "^3.2.7",
