--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-h5-audio-player": "^3.8.6",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
