--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@google-cloud/text-to-speech": "^4.2.1",
     "@mantine/core": "^5.10.5",
+    "@mantine/form": "^6.0.1",
     "@mantine/hooks": "^5.10.5",
     "@tabler/icons-react": "^2.7.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
