--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BASE_URL=http://localhost:3000/api
+VITE_BASE_URL=http://ec2-18-143-75-65.ap-southeast-1.compute.amazonaws.com:3000
+VITE_S3_URL=https://commun1ty-dev.s3-ap-southeast-1.amazonaws.com
