--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "^2.7.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
     "howler": "^2.2.3",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
